objects/CHR_CSR_Services__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CL_Feedback_Recc_Response_1__c</fullName>
        <label>Feedback/Response 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSA_SLA_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSA/SLA Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSR_Name__c</fullName>
        <label>CHR/CSR Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amy Teeter</fullName>
                </value>
                <value>
                    <fullName>Donna Jones</fullName>
                </value>
                <value>
                    <fullName>Evan Bennett</fullName>
                </value>
                <value>
                    <fullName>Heather Wiley</fullName>
                </value>
                <value>
                    <fullName>Jo Ann Kaita</fullName>
                </value>
                <value>
                    <fullName>Kim Gould</fullName>
                </value>
                <value>
                    <fullName>Oahu - Other</fullName>
                </value>
                <value>
                    <fullName>Pam Shepard-Henderson</fullName>
                </value>
                <value>
                    <fullName>Pansy Mendez</fullName>
                </value>
                <value>
                    <fullName>Tennille Kephart</fullName>
                </value>
                <value>
                    <fullName>Theresa Menke</fullName>
                </value>
                <value>
                    <fullName>Tina LePage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SEXHAR101</fullName>
                </value>
                <value>
                    <fullName>WPV101</fullName>
                </value>
                <value>
                    <fullName>DISCRM101</fullName>
                </value>
                <value>
                    <fullName>WGHR101</fullName>
                </value>
                <value>
                    <fullName>EMPHIR101</fullName>
                </value>
                <value>
                    <fullName>DSCTERM101</fullName>
                </value>
                <value>
                    <fullName>SPV101</fullName>
                </value>
                <value>
                    <fullName>HR 202-Management</fullName>
                </value>
                <value>
                    <fullName>HR 202-Employees</fullName>
                </value>
                <value>
                    <fullName>HR 303</fullName>
                </value>
                <value>
                    <fullName>HR 404</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Congratulatory_Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Congratulatory &amp; Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Guidebook_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Guidebook Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Referral_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Referral Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Requested_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Requested Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Rescue_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Rescue Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Visit_Notes__c</fullName>
        <label>Client Visit Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CSR_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if necessary collateral for a particular client touch was ordered.</description>
        <inlineHelpText>Select once the necessary collateral has been ordered for the client touch.</inlineHelpText>
        <label>Collateral Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Constructive_Feedback__c</fullName>
        <label>Constructive Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <label>Contact 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria/Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volume/Size</fullName>
                </value>
                <value>
                    <fullName>OnBoarding Request</fullName>
                </value>
                <value>
                    <fullName>Client Service Request</fullName>
                </value>
                <value>
                    <fullName>HR/Compliance Request</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Rollover</fullName>
                </value>
                <value>
                    <fullName>HR COMP</fullName>
                </value>
                <value>
                    <fullName>SVC TEAM</fullName>
                </value>
                <value>
                    <fullName>CLIENT VOL</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Client Growth</fullName>
                </value>
                <value>
                    <fullName>New Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disciplinary_Action_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disciplinary Action Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discrimination_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discrimination Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Hiring_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Hiring Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Special training activities</description>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Multi-client Session</fullName>
                </value>
                <value>
                    <fullName>Healthcare Seminar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Response_10__c</fullName>
        <label>Feedback/Response 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Response_2__c</fullName>
        <label>Feedback/Response 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Response_3__c</fullName>
        <label>Feedback/Response 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Future_Visit_Training_Opportunities__c</fullName>
        <label>Future Visit/Training Opportunities</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HR_Compliance_Introduction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Phone consutlation of HR Compliance services</description>
        <label>HR Compliance Introduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Compliance_OnBoarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Compliance OnBoarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Observation_10__c</fullName>
        <label>HR Observation 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HR_Observation_1__c</fullName>
        <label>HR Observation 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HR_Observation_2__c</fullName>
        <label>HR Observation 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Island__c</fullName>
        <formula>IF(Cost_Center__c =1, "Oahu", 
if(Cost_Center__c =2, "Kailua-Kona, Big Island", 
if(Cost_Center__c =3, "Kahului, Maui", 
if(Cost_Center__c =5, "Lanai", 
if(Cost_Center__c =21, "Hilo, Big Island", 
if(Cost_Center__c =4, "Kapaa, Kauai",""))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Island</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_Guide_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager's Guide Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Client_Manager_Introduction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Client Manager Introduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Attendees__c</fullName>
        <label># of Attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OE_Client_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OE Client Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Notes_HR_Issues__c</fullName>
        <label>Other Notes/HR Issues</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <label>Overall Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participant Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payroll_Invoice_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payroll/Invoice Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Evaluation_Learning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Evaluation &amp; Learning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Positive_Feedback__c</fullName>
        <label>Positive Feedback/Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_Visit_Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post-Visit Follow-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Visit_Notes__c</fullName>
        <label>Post-Visit Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Visit_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Visit Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Visit_Notes__c</fullName>
        <label>Pre-Visit Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>Unique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProService_Core_Serivces_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProService Core Services Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProService_Forms_Library__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProService Forms Library</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regulatory_Industry_Update_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regulatory/Industry Update Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Accounts__c</fullName>
        <label>Related Accounts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Visit__c</fullName>
        <label>Scheduled Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sensitivity_Diversity_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sensitivity/Diversity Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sexual_Harassment_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sexual Harassment Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Visit Declined</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisory_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supervisory Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_You_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thank You Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Flag__c</fullName>
        <formula>IF(ISPICKVAL( Visit_Score__c , "Acknowledged"), 
IMAGE("/img/samples/light_red.gif", "red", 15, 35), 
IF(ISPICKVAL( Visit_Score__c , "Acceptance"), 
IMAGE("/img/samples/light_yellow.gif", "yellow", 15, 35), 
IF(ISPICKVAL( Visit_Score__c , "Agreement"),
IMAGE("/img/samples/light_green.gif", "green", 15, 35),null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Length__c</fullName>
        <label>Visit Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>105</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>165</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>270</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>330</fullName>
                </value>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>390</fullName>
                </value>
                <value>
                    <fullName>510</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Quarter__c</fullName>
        <label>Visit Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Quarter - 2009</fullName>
                </value>
                <value>
                    <fullName>4th Quarter - 2009</fullName>
                </value>
                <value>
                    <fullName>1st Quarter - 2010</fullName>
                </value>
                <value>
                    <fullName>2nd Quarter - 2010</fullName>
                </value>
                <value>
                    <fullName>3rd Quarter - 2010</fullName>
                </value>
                <value>
                    <fullName>4th Quarter - 2010</fullName>
                </value>
                <value>
                    <fullName>1st Quarter - 2011</fullName>
                </value>
                <value>
                    <fullName>2nd Quarter - 2011</fullName>
                </value>
                <value>
                    <fullName>3rd Quarter - 2011</fullName>
                </value>
                <value>
                    <fullName>4th Quarter - 2011</fullName>
                </value>
                <value>
                    <fullName>1st Quarter - 2012</fullName>
                </value>
                <value>
                    <fullName>2nd Quarter - 2012</fullName>
                </value>
                <value>
                    <fullName>3rd Quarter - 2012</fullName>
                </value>
                <value>
                    <fullName>4th Quarter - 2012</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Score__c</fullName>
        <label>Visit Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Acceptance</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wage_Hour_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wage &amp; Hour Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Based_Resources_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web-Based Resources Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workplace_Violence_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workplace Violence Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4_in_1_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4-in-1 Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Modules__c</fullName>
        <description>Count of modules</description>
        <label># of Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>upcoming_Call_Campaign_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upcoming Call Campaign Notification</label>
        <type>Checkbox</type>
    </fields>
    <label>CHR/CSR Services</label>
    <nameField>
        <label>CHR/CSR Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CHR/CSR Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>CSR_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Island__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Visits_2009</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>CSR_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Island__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>3rd Quarter - 2009,4th Quarter - 2009</value>
        </filters>
        <label>All Visits - 2009</label>
    </listViews>
    <listViews>
        <fullName>All_Visits_2010</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>CSR_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Island__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>1st Quarter - 2010,2nd Quarter - 2010,3rd Quarter - 2010,4th Quarter - 2010</value>
        </filters>
        <label>All Visits - 2010</label>
    </listViews>
    <listViews>
        <fullName>All_Visits_2011</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>CSR_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Island__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>1st Quarter - 2011,2nd Quarter - 2011,3rd Quarter - 2011,4th Quarter - 2011</value>
        </filters>
        <label>All Visits - 2011</label>
    </listViews>
    <listViews>
        <fullName>Amy_s_target_list</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Client_Visit_Notes__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSR_Name__c</field>
            <operation>equals</operation>
            <value>Amy Teeter</value>
        </filters>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2nd Quarter - 2010,3rd Quarter - 2010</value>
        </filters>
        <label>Amy's target list</label>
    </listViews>
    <listViews>
        <fullName>X1st_Quarter_2011</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>CSR_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Island__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <columns>No_of_Attendees__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>1st Quarter - 2011</value>
        </filters>
        <label>1st Quarter - 2011</label>
    </listViews>
    <listViews>
        <fullName>X1st_Quarter_Visits_2010</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>CSR_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Island__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <columns>No_of_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>1st Quarter - 2010</value>
        </filters>
        <label>1st Quarter Visits - 2010</label>
    </listViews>
    <listViews>
        <fullName>X2009_All_Visits</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>CSR_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Island__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>3rd Quarter - 2009,4th Quarter - 2009</value>
        </filters>
        <label>2009 - All Visits</label>
    </listViews>
    <listViews>
        <fullName>X2nd_Quarter_2011</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>CSR_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Island__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <columns>No_of_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2nd Quarter - 2011</value>
        </filters>
        <label>2nd Quarter - 2011</label>
    </listViews>
    <listViews>
        <fullName>X2nd_Quarter_Visits_2010</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>CSR_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Island__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <columns>No_of_Attendees__c</columns>
        <columns>Thank_You_Letter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>2nd Quarter - 2010</value>
        </filters>
        <label>2nd Quarter Visits - 2010</label>
    </listViews>
    <listViews>
        <fullName>X3rd_Quarter_2011</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>CSR_Name__c</columns>
        <columns>Criteria__c</columns>
        <columns>Island__c</columns>
        <columns>Scheduled_Visit__c</columns>
        <columns>Team__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_Quarter__c</columns>
        <columns>Visit_Flag__c</columns>
        <columns>No_of_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Quarter__c</field>
            <operation>equals</operation>
            <value>3rd Quarter - 2011</value>
        </filters>
        <label>3rd Quarter - 2011</label>
    </listViews>
</CustomObject>